<resources>
    <string name="app_name">Netclan Clone</string>
    <string name="business">Business</string>
    <string name="merchant">Merchant</string>
    <string name="personal">Personal</string>
    <string name="howdy_user_netclan">Howdy User Netclan !!</string>
    <string name="locality_city">Locality, City</string>
    <string name="refine">Refine</string>
    <string name="user_name_netclan">User Name Netclan</string>
    <string name="user_code">User Code</string>
    <string name="available">Available</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="coffee_business_friendship">Coffee | Business | Friendship</string>
    <string name="hi_community">Hi Comunity! I am open to new connections " 😊 "</string>
    <string name="select_availability">Select Your Availability</string>
    <string name="show_menu">Show Menu</string>
    <string name="save_explore"><![CDATA[Save & Explore]]></string>
</resources>