<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:padding="20dp"
    android:background="@drawable/nav_back2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/draw_Iv"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/nav_dp_placeholder"
            app:civ_border_width="1dp"
            app:civ_border_color="@color/white_001"/>

        <TextView
            android:id="@+id/draw_nameTV"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white_001"
            android:text="@string/user_name_netclan"
            android:textSize="18sp"
            android:fontFamily="@font/roboto_bold"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/draw_codeTv"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white_001"
            android:text="@string/user_code"
            android:textSize="16sp"
            android:fontFamily="@font/roboto"
            android:textAllCaps="true"/>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/draw_progress"
            android:layout_width="100dp"
            android:layout_height="10dp"
            android:layout_marginTop="5dp"
            app:trackColor="#4DFFFFFF"
            app:indicatorColor="@color/white_001"
            app:trackCornerRadius="100dp"
            app:trackThickness="12dp"
            android:progress="20"/>

        <TextView
            android:id="@+id/draw_availability"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white_001"
            android:text="@string/available"
            android:textSize="14sp"
            android:fontFamily="@font/roboto"
            android:layout_marginTop="5dp"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/draw_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:src="@drawable/baseline_settings_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>